@@ -1,10 +1,12 @@
 .TH "History For AdvanceCOMP" 1
 .SH NAME
 advcomp \(hy History For AdvanceCOMP
-.SH ADVANCECOMP VERSION 1.16 2012/12 
+.SH ADVANCECOMP VERSION 1.16 2013/03 
 .PD 0
 .IP \(bu
 Allowed recompression with files with zero length.
+.IP \(bu
+Some other minor bugfixes.
 .IP \(bu
 Now in git repository.
 .PD
