@@ -5,11 +5,14 @@
 <body>
 <center><h2>History For AdvanceCOMP</h2></center>
 <h2> 
-AdvanceCOMP Version 1.16 2012/12
+AdvanceCOMP Version 1.16 2013/03
 </h2>
 <ul>
 <li>
 Allowed recompression with files with zero length.
+</li>
+<li>
+Some other minor bugfixes.
 </li>
 <li>
 Now in git repository.
